--- a/css/style.css
+++ b/css/style.css
@@ -340,6 +340,7 @@ li:focus-within>button>.arrow {
     width: 100%;
     height: 100%;
 }
+
 .mySwiper1 {
     margin-left: auto;
     margin-right: auto;
@@ -350,13 +351,16 @@ li:focus-within>button>.arrow {
     z-index: 1;
     width: 100%
 }
+
 .mySwiper1 .swiper-wrapper {
     width: 100%;
     justify-content: center;
 }
+
 .mySwiper2 .swiper-wrapper {
     width: 100%;
 }
+
 .swiper-slide {
     font-size: 18px;
     max-width: 100%;
@@ -387,6 +391,7 @@ li:focus-within>button>.arrow {
     transform: translateX(-15%);
     margin-left: 70px;
 }
+
 .swiper-slide.swiper-slide-prev {
     transform: translateX(15%);
     z-index: -10;
@@ -453,6 +458,7 @@ li:focus-within>button>.arrow {
     background-repeat: no-repeat;
     border-radius: 10px;
 }
+
 /* SLIDER2  */
 .article-content .swiper {
     width: 100%;
@@ -479,6 +485,7 @@ li:focus-within>button>.arrow {
     -webkit-align-items: center;
     align-items: center;
 }
+
 /* TEXT SLIDER  */
 .jv-slide-body {
     display: flex;
@@ -511,6 +518,7 @@ li:focus-within>button>.arrow {
     width: 100%;
     height: 100%;
 }
+
 /* MAIN CONTENT  */
 .wrapper {
     width: 88%;
@@ -839,7 +847,7 @@ li:focus-within>button>.arrow {
 
 .jv-article-img-4 {
     background-image: url('https://japanview.tv/wp-content/uploads/2021/07/image-01.jpg'), linear-gradient(to bottom, rgba(163, 66, 94, 0) 0%, rgba(141, 82, 99, 0.418) 60%, rgb(172, 93, 114) 100%);
-    background-blend-mode: soft-light; 
+    background-blend-mode: soft-light;
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -1476,6 +1484,7 @@ li:focus-within>button>.arrow {
 .jv-footer-menu .nav-contents>li {
     padding: 0 0 0 24px;
 }
+
 .jv-footer-menu li:nth-child(4) ul li {
     flex: none;
 }
@@ -1489,12 +1498,99 @@ li:focus-within>button>.arrow {
     margin: 0;
     padding: 0;
 }
+
 #menu-item-19221 .sub-menu {
     display: block;
 }
+
 #menu-item-19224 .sub-menu {
     display: block;
 }
+
 #menu-item-19228 .sub-menu {
     display: block;
+}
+
+/* MEDIA BUTTON */
+.wrapper {
+    display: inline-flex;
+}
+
+.wrapper .icon {
+    margin: 0 20px;
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    z-index: 2;
+    transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapper .icon span {
+    display: block;
+    height: 60px;
+    width: 60px;
+    background: #cd8d9f;
+    border-radius: 50%;
+    position: relative;
+    z-index: 2;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+    transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapper .icon span i {
+    line-height: 60px;
+    font-size: 25px;
+}
+
+.wrapper .icon .tooltip {
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    background: #fff;
+    color: #fff;
+    padding: 10px 18px;
+    font-size: 20px;
+    font-weight: 500;
+    border-radius: 25px;
+    opacity: 0;
+    pointer-events: none;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+    transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapper .icon:hover .tooltip {
+    top: -70px;
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.icon .tooltip:before {
+    position: absolute;
+    content: "";
+    height: 15px;
+    width: 15px;
+    background: #fff;
+    left: 50%;
+    bottom: -6px;
+    transform: translateX(-50%) rotate(45deg);
+    transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapper .icon:hover span {
+    color: #fff;
+}
+
+.wrapper .icon:hover span,
+.wrapper .icon:hover .tooltip {
+    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.4);
+}
+
+.wrapper .instagram:hover span,
+.wrapper .instagram:hover .tooltip,
+.wrapper .instagram:hover .tooltip:before {
+    background: #e1306c;
 }
