--- a/css/style.css
+++ b/css/style.css
@@ -160,8 +160,6 @@ input[type="checkbox"]:focus+label::before {
     box-shadow: 0 0 20px black;
 }
 
-ul {}
-
 ul li {
     list-style: none;
     font-size: 18px;
@@ -972,8 +970,6 @@ li:focus-within>button>.arrow {
     margin: 0px auto;
 }
 
-.tab-trigger {}
-
 .tab-trigger ul {
     margin: 0;
     padding: 0;
@@ -983,8 +979,6 @@ li:focus-within>button>.arrow {
     font-family: 'Gilroy', sans-serif;
     font-weight: bold;
 }
-
-.tab-trigger ul li {}
 
 .tab-trigger ul li label {
     position: relative;
@@ -1512,11 +1506,15 @@ li:focus-within>button>.arrow {
 }
 
 /* MEDIA BUTTON */
-.wrapper {
-    display: inline-flex;
+.media-button {
+    display: inline-grid;
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
 }
 
-.wrapper .icon {
+.media-button .icon {
     margin: 0 20px;
     text-align: center;
     cursor: pointer;
@@ -1528,8 +1526,10 @@ li:focus-within>button>.arrow {
     z-index: 2;
     transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
-
-.wrapper .icon span {
+.media-button .instagram {
+    margin-bottom: 20px;
+}
+.media-button .icon span {
     display: block;
     height: 60px;
     width: 60px;
@@ -1541,12 +1541,12 @@ li:focus-within>button>.arrow {
     transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-.wrapper .icon span i {
+.media-button .icon span i {
     line-height: 60px;
     font-size: 25px;
 }
 
-.wrapper .icon .tooltip {
+.media-button .icon .tooltip {
     position: absolute;
     top: 0;
     z-index: 1;
@@ -1562,12 +1562,14 @@ li:focus-within>button>.arrow {
     transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-.wrapper .icon:hover .tooltip {
+.media-button .icon:hover .tooltip {
     top: -70px;
     opacity: 1;
     pointer-events: auto;
 }
-
+.fab {
+    color: #fff;
+}
 .icon .tooltip:before {
     position: absolute;
     content: "";
@@ -1580,17 +1582,31 @@ li:focus-within>button>.arrow {
     transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-.wrapper .icon:hover span {
+.media-button .icon:hover span {
     color: #fff;
 }
 
-.wrapper .icon:hover span,
-.wrapper .icon:hover .tooltip {
+.media-button .icon:hover span,
+.media-button .icon:hover .tooltip {
     text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.4);
 }
 
-.wrapper .instagram:hover span,
-.wrapper .instagram:hover .tooltip,
-.wrapper .instagram:hover .tooltip:before {
-    background: #e1306c;
+.media-button .instagram:hover span,
+.media-button .instagram:hover .tooltip,
+.media-button .instagram:hover .tooltip:before {
+    background: #67b1b6;
+}
+.media-button .language:hover span,
+.media-button .language:hover .tooltip,
+.media-button .language:hover .tooltip:before {
+    background: #67b1b6;
+}
+
+.fa-language {
+    font-weight: bold !important;
+    font-size: 26px !important;
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    padding: 17px 25px 17px 1px;
 }
